REGRESSION (259678@main): [ iOS17 ] ASSERTION FAILED: task.callback for fast/dom/Orientation/no-orientation-change-event-when-unparenting-view.html result of a consistent crash https://bugs.webkit.org/show_bug.cgi?id=267934 rdar://121454476

Reviewed by Ryosuke Niwa.

Make sure we clear the `rotationDidEndCallback` delegate on the WKWebView once
it has been called. Otherwise, we may end up trying to call the callback several
times, which would hit the assertion we were seeing.

* Tools/WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptControllerIOS::simulateRotation):

Canonical link: https://commits.webkit.org/275423@main